changed the data page

--- a/convert.html
+++ b/convert.html
@@ -1,37 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR2iXCbMQv3Xipma34MD+dH/1fQ784/j12cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css">
-    <title>Weather Analysis Visualization</title>
+	<title>Data</title>
 </head>
-<body id = "body">
-
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-        <a class="navbar-brand" href="index.html">Latitude</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor21" aria-controls="navbarColor21" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor21">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Plots</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="comparison.html">Comparison</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Data</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-</body>
-
-
 <body>
 	<table id="table">
 		<caption>Data</caption>
@@ -466,3 +437,4 @@ c+"</h1><div>"+("function"===typeof e.message?e.message(b,h,e):e.message)+"</div
 			display: none;
 		}
 </body>
+</html>
