--- a/wind_speed.html
+++ b/wind_speed.html
@@ -22,10 +22,10 @@
                 <a class="nav-link" href="#">Plots</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Comparison</a>
+                <a class="nav-link" href="comparison.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="data.html">Data</a>
             </li>
             </ul>
         </div>
@@ -40,7 +40,7 @@
 
                     <h2>Summary: Latitude vs Longitude</h2>
                     <hr>
-                    <img class="first image" src="assets\humidity_vs_temp_scatter_plot.png" alt="first image" >
+                    <img class="first image" src="Assets/latitude_vs_windspeed_scatter_plot.png" alt="first image" >
                     <p class = "text">
 
                       The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
