--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="maxtemp.html">Lat vs Max Temp</a>
               <a class="dropdown-item" href="windspeed.html">Lat vs Wind</a>
-              <a class="dropdown-item" href="cloudy.html">Lat vs Cloudiness</a>
+              <a class="dropdown-item" href="cloudiness.html">Lat vs Cloudiness</a>
             </div>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="comparisons.html">Comparisons <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="comparison.html">Comparison <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="data.html">Data <span class="sr-only">(current)</span></a>
@@ -48,25 +48,11 @@
               <hr>
               <img class="temp_plot"  src="assets\humidity_vs_temp_scatter_plot.png" alt="temp_plot">
               <BR CLEAR=”left” /> 
-              <p class = "text" id="firstpar">
-
-                The path of the righteous man is beset on all sides by the iniquities of the selfish and 
-                the tyranny of evil men. Blessed is he who, in the name of charity and good will, 
-                shepherds the weak through the valley of darkness, for he is truly his brother's keeper 
-                and the finder of lost children. And I will strike down upon thee with great vengeance 
-                and furious anger those who would attempt to poison and destroy My brothers. And you 
-                will know My name is the Lord when I lay My vengeance upon thee.
-
-              </p>
-              <br> 
-              <p>
-                The path of the righteous man is beset on all sides by the iniquities of the selfish and
-                the tyranny of evil men. Blessed is he who, in the name of charity and good will, 
-                shepherds the weak through the valley of darkness, for he is truly his brother's keeper
-                and the finder of lost children. And I will strike down upon thee with great vengeance
-                and furious anger those who would attempt to poison and destroy My brothers. And you 
-                will know My name is the Lord when I lay My vengeance upon thee.
-              </p>       
+              <p class = "text">This is an analysis and visualization of weather of s00+ cities across the world. The main objective was to showcase the relationship of various factors like temperature, humidity, cloudiness and wind speed with respect to the distance from the equator. <br> 
+                This is an analysis and visualization of weather of 700+ cities across the world. The main objective was to showcase the relationship of various factors like temperature, humidity, cloudiness and wind speed with respect to the distance from the equator. <br> <br>
+              For this analysis, the latitude and longitude were created randomly and then CityPy (a Python library) was used to generate city names for respective coordinates. 
+              After selecting unique non-repeat observations, a weather check was performed on each of the cities using a series of successive API calls from OpenWeatherMap. Then all different point of interests were plotted against latitude using Matplotlib.<br><br> 
+              Clicking the visualizations on the right will give you a more in-depth analyis of the relationship between Longitude and the respective data point.</p>      
               </div>
           </div>
       </div>
@@ -76,7 +62,7 @@
                       <h2>Visualizations</h2>
                       <hr>
                       <div class="row" >
-                          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="assets\latitude_vs_temp_scatter_plot.png" style="width:100%" alt=""></a></div>
+                          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="Assets\latitude_vs_temp_scatter_plot.png" style="width:100%" alt=""></a></div>
                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="Assets/humidity_vs_temp_scatter_plot.png" style="width:100%" alt=""></a></div>
                       </div>
                       <div class="row">
