--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
             <hr>
             <img class="temp_plot" src="Assets/humidity_vs_temp_scatter_plot.png" alt="temp_plot">
             <BR CLEAR=”left” />
-            <p class="text">This is an analysis and visualization of weather of s00+ cities across the world. The main
-              objective was to showcase the relationship of various factors like temperature, humidity, cloudiness and
-              wind speed with respect to the distance from the equator. <br>
-              This is an analysis and visualization of weather of 700+ cities across the world. The main objective was
+            <p class="text">
+              This is an analysis and visualization of weather of 500+ cities across the world. The main objective was
               to showcase the relationship of various factors like temperature, humidity, cloudiness and wind speed with
               respect to the distance from the equator. <br> <br>
               For this analysis, the latitude and longitude were created randomly and then CityPy (a Python library) was
